--- a/package.json
+++ b/package.json
@@ -5,16 +5,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tailwind:css": "postcss styles/tailwind.css -o styles/global.css"
   },
   "dependencies": {
+    "@craco/craco": "^6.4.0",
+    "autoprefixer": "^10.4.0",
     "next": "12.0.2",
+    "next-auth": "^4.0.0-beta.6",
+    "next-pwa": "^5.4.0",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux": "^3.6.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "typescript": "4.4.4"
